# superdrops-in-action

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  cog.toml  environment.yaml  genindex.html  index.html  objects.inv  references.html  requirements.txt  search.html  searchindex.js  setup.py  sphinx-reading-durations.json
cleo_1dkid/: CMakeLists.txt  cleo_1dkid.html
cleo_1dkid/cleo_deps/: CMakeLists.txt
cleo_1dkid/cleo_deps/libs/: CMakeLists.txt  cleoconstants.hpp  kokkosaliases.hpp
cleo_1dkid/cleo_deps/libs/cartesiandomain/: CMakeLists.txt  cartesian_decomposition.hpp  cartesianmaps.cpp  cartesianmaps.hpp  collect_data_for_collective_dataset.hpp  createcartesianmaps.hpp  domainboundaries.hpp  doubly_periodic_domain.hpp  kid_reinit.hpp
cleo_1dkid/cleo_deps/libs/configuration/: CMakeLists.txt  config.hpp  copyfiles2txt.hpp  optional_config_params.cpp  optional_config_params.hpp  required_config_params.hpp
cleo_1dkid/cleo_deps/libs/coupldyn_cvode/: CMakeLists.txt  cvodecomms.hpp  cvodedynamics.hpp  differentialfuncs.hpp  initgbxs_cvode.hpp
cleo_1dkid/cleo_deps/libs/coupldyn_fromfile/: CMakeLists.txt  fromfile_cartesian_dynamics.hpp  fromfilecomms.hpp
cleo_1dkid/cleo_deps/libs/coupldyn_null/: nulldynamics.hpp  nulldyncomms.hpp
cleo_1dkid/cleo_deps/libs/gridboxes/: CMakeLists.txt  boundary_conditions.hpp  cfl_criteria.hpp  findrefs.hpp  gbxindex.hpp  gridbox.hpp  gridboxmaps.hpp  movesupersindomain.hpp  predcorr.hpp  predcorrmotion.hpp  sortsupers.hpp  supersindomain.hpp  supersingbx.hpp  transport_across_domain.hpp
cleo_1dkid/cleo_deps/libs/initialise/: CMakeLists.txt  gbx_bounds_from_binary.hpp  init_all_supers_from_binary.hpp  init_supers_from_binary.hpp  initgbxsnull.hpp  initialconditions.hpp  readbinary.hpp  timesteps.hpp
cleo_1dkid/cleo_deps/libs/observers/: CMakeLists.txt  collect_data_for_dataset.hpp  collect_data_for_simple_dataset.hpp  consttstep_observer.hpp  create_massmoments_arrays.hpp  gbxindex_observer.hpp  generic_collect_data.hpp  kid_observer.hpp  massmoments_observer.hpp  nsupers_observer.hpp  observers.hpp  parallel_write_data.hpp  state_observer.hpp  streamout_observer.hpp  superdrops_observer.hpp  thermo_observer.hpp  time_observer.hpp  totnsupers_observer.hpp  windvel_observer.hpp  write_to_dataset_observer.hpp
cleo_1dkid/cleo_deps/libs/pycleo/: CMakeLists.txt  optional_terminal_velocity.hpp  py_cartesiandomain.hpp  py_configuration.hpp  py_gridboxes.hpp  py_initialise.hpp  py_observers.cpp  py_observers.hpp  py_runcleo.cpp  py_runcleo.hpp  py_superdrops.hpp  py_zarr.hpp  pycleo.hpp  pycleo_aliases.hpp
cleo_1dkid/cleo_deps/libs/runcleo/: CMakeLists.txt  coupleddynamics.hpp  couplingcomms.hpp  creategbxs.hpp  createsupers.hpp  gensuperdrop.hpp  runcleo.hpp  sdmmethods.hpp
cleo_1dkid/cleo_deps/libs/superdrops/: condensation.hpp  impliciteuler.hpp  kokkosaliases_sd.hpp  microphysicalprocess.hpp  motion.hpp  sdmmonitor.hpp  state.hpp  superdrop.hpp  superdrop_attrs.hpp  superdrop_ids.hpp  terminalvelocity.hpp  thermodynamic_equations.hpp
cleo_1dkid/cleo_deps/libs/zarr/: CMakeLists.txt  buffer.hpp  chunks.hpp  collective_dataset.hpp  (+8 more)
cleo_1dkid/libs/: __init__.py
cleo_1dkid/libs/cleo_sdm/: __init__.py  cleo_sdm.py  microphysics_scheme_wrapper.py
cleo_1dkid/libs/pympdata_bulk/: __init__.py  bulk_scheme_condensation.py
cleo_1dkid/libs/test_case_1dkid/: __init__.py  arakawa_c.py  kid_dynamics.py  mpdata.py  perform_1dkid_test_case.py  run_1dkid.py  settings.py
cleo_1dkid/libs/thermo/: __init__.py  formulae.py  output_thermodynamics.py  thermodynamics.py
cleo_1dkid/libs/utility_functions/: __init__.py  plot_utilities.py
cleo_1dkid/scripts/: beautyplot_cleo_1dkid_ensembles.py  beautyplot_figure4.py  compile_pycleo_levante.sh  plot_cleo_1dkid_ensemble.py  quickplot_cleo_1dkid.py  run_cleo_1dkid.py  run_cleo_1dkid_condevap_only.py  run_cleo_1dkid_fullscheme.py
cleo_1dkid/scripts/bash/: compile_cleo_python_bindings_levante.sh  compile_pycleo_levante.sh  inputfiles_cleo_1dkid.sh  run_1dkid_levante.sh  run_cleo_1dkid.sh
cleo_1dkid/tests/: __init__.py  conftest.py  test_cleo_sdm_microphysics_scheme.py  test_pympdata_bulk_microphysics_scheme.py
cleo_1dkid/tests/test_case_1dkid/: __init__.py  test_cleo_sdm_condevap_only.py  test_cleo_sdm_fullscheme.py  test_pympdata_bulk.py
(+149 files in other folders)
